bug quizz / alignement liste déroulante log / bug atelier

--- a/assets/styles/footer.scss
+++ b/assets/styles/footer.scss
@@ -1,7 +1,7 @@
 .foot{
 font-family: var(--font);
 background-color: var(--couleur-claire);
-margin-top: 5%;
+margin-top: 6%;
 padding: 2% 3%;
 }
 
