--- a/assets/styles/globale.scss
+++ b/assets/styles/globale.scss
@@ -292,11 +292,6 @@ a {
     background-color: var(--couleur-claire);
     color: var(--couleur-fonce);
     padding: 10px 50px;
-    /* Important for vertical align on mobile phones */
-    margin: 0;
-    /* Important for vertical align on mobile phones */
-    margin-left: 2.5vw;
-    margin-top: -3vh;
 }
 
 /* ajoute le fond rouge quand tu hover */
@@ -309,7 +304,6 @@ a {
 /* Dropdown content (hidden by default) */
 .dropdown-content {
     display: none;
-    position: absolute;
     background-color: var(--couleur-claire);
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
@@ -323,7 +317,6 @@ a {
     padding: 10% 20%;
     text-decoration: none;
     display: block;
-    text-align: left;
 }
 
 /* Add a grey background color to dropdown links on hover */
